Bugfix T42697: Hiding/unhiding NLA strip doesn't update the 3D Viewport

The Toggle Muting operator was missing code to tag the animation to get recalculated.

This was also missing from a few other operators too, including Snap, and
Add/Paste FModifiers .